<resources>
    <string name="app_name">Zikub</string>
    <string name="title_activity_login">Se connecter</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nom</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_password_confirm">Confirmation du mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="action_register">S\'inscrirer</string>
    <string name="error_no_username">Veuillez entrer un nom d\'utilisateur</string>
    <string name="error_invalid_email">Cette adresse est invalide</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_no_password">Veuillez entrer un mot de passe</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_invalid_password_confirmation">Le mot de passe et sa confirmation ne correspondent pas</string>
    <string name="error_field_required">Champs requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">S\'inscrire</string>
    <string name="title_activity_settings">Paramètres</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Général</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- home -->
    <string name="zikub">Zikub</string>
    <string name="devise">Partagez vos musiques avec vos amis</string>
    <string name="conditions">Conditions d\'utilisation</string>
    <string name="btnConnexion">Connexion</string>
    <string name="btnInscription">Inscription</string>
    <string name="btnConnexionFB">Se connecter avec Facebook</string>
    <string name="btnConnexionT">Se connecter avec Twitter</string>
    <string name="btnConnexionG">Se connecter avec Google +</string>
</resources>
